--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,18 @@ body {
   background-color: #abd9df;
   display: flex;
   justify-content: center;
+  box-sizing: border-box;
+  overflow: hidden;
 }
+.App {
+  width: 400px;
+}
+
 .todo {
   background: #003060;
+  width: 100%;
   padding: 0.5rem;
-  margin: 1rem;
+  margin-top: 1rem;
   display: inline-block;
   border-radius: 3px;
 }
@@ -19,7 +26,7 @@ body {
   float: left;
   padding: 5px;
   outline: none;
-  width: 220px;
+  width: 60%;
   color: #add8e680;
 }
 
@@ -38,17 +45,25 @@ body {
 .addtask_button {
   float: right;
   padding: 0.3rem 0.5rem;
-  border-radius: 3px;
+  border-radius: 1px;
   cursor: pointer;
   outline: none;
+  border: 1px solid #0dbab1;
+  background: #0dbab1;
 }
 
 .list {
   list-style-type: none;
 }
-.list li img {
-  margin-left: 5rem;
+.list_item {
+  background: #00306060;
+  padding: 0.5rem;
+  width: 110%;
+  margin: 0.5rem -2rem;
+  display: flex;
+  justify-content: space-between;
 }
+
 .list li input[type="checkbox"] {
   height: 0;
   width: 0;
